# grynn_cli_fplot

./: .gitignore  .pre-commit-config.yaml  FILTER_DESIGN.md  FILTER_EXAMPLES.sh  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  drawdowns.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  todo.md
.github/workflows/: publish.yml
alfred/: info.plist
grynn_cli_fplot/: __init__.py  fplot.py  test_fplot.py
grynn_fplot/: calculator.py  cli.py  core.py  filter_parser.py  index.html  serve.py  web_api.py
src/grynn_fplot/: cli.py  core.py  drawdowns.py  serve.py
tests/: test_candlestick.py  test_cli_integration.py  test_cli_options.py  test_filter_evaluation.py  test_filter_parser.py  test_fplot.py  test_leverage.py  test_options.py  test_web_api.py  test_web_interface.py
