[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'grynn_cli_fplot'
version = '0.2.1'
description = 'cli tool for plotting financial data'
authors = [ { name="Grynn", email="vishal.doshi@gmail.com" }]
requires-python = '>=3.9'
dependencies = [
    "click ~= 8.1.7",
    "yfinance ~= 0.2.44",
    "matplotlib ~= 3.9.2",
    "dateparser ~= 1.2.0",
    "mplcursors ~= 0.5.3"
]

[project.scripts]
fplot = 'grynn_cli_fplot:display_plot'