[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grynn_fplot"
version = "0.2.1"
description = "CLI tool for plotting financial data"
authors = [{ name = "Grynn", email = "vishal.doshi@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "click~=8.1.7",
    "yfinance ~= 0.2.44",
    "matplotlib ~= 3.9.2",
    "dateparser ~= 1.2.0",
    "mplcursors ~= 0.5.3",
    "fastapi ~= 0.115.0",
    "uvicorn ~= 0.32.0",
]

[project.scripts]
fplot = "grynn_fplot.cli:display_plot"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
